# redis-spaceship

./: Makefile  README.md  docker-compose.yml  keys.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.py  spaceship.code-workspace  spaceship.py
book/: 1_structured_data.md
images/: redis.jpg:Zone.Identifier  wreck.jpg:Zone.Identifier
spaceship/: errors.py  keys.py  models.py  protocols.py  python.py  redis.py  spaceship.py
tests/: test_python.py  test_redis.py  test_spaceship.py
